--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/material": "^20.2.12",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngneat/overview": "6.1.1",
+    "@ngxpert/hot-toast": "^5.1.3",
     "@tailwindcss/postcss": "^4.1.17",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
